# Chust

./: Cargo.toml
.cargo/: config.toml
src/: board.rs  main.rs  taken.rs  turn.rs  ui.rs
src/board/: component.rs  constants.rs  event.rs  mod.rs
src/pieces/: assets.rs  component.rs  mod.rs
