[package]
name = "chust"
version = "0.1.0"
authors = ["CPea <cpea2506@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8.5"
bevy = "0.11.2"
bevy_mod_picking = "0.15.0"
bevy_asset_loader = "0.17.0"
